--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,103 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Roboto|Ubuntu&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Ubuntu', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
+.root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.root::before {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.95;
+  background-image: url('./download.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+
+.back {
+  position: absolute;
+  top: 60px;
+  left: 10px;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+}
+
+nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 50px;
+  background-color: #d1d1d1;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box {
+  height: 60%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #09d3ac;
+.btn {
+  border: none;
+  outline: none;
+  width: 50vw;
+  padding: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.box1 {
+  background-color: #d1d1d1;
+  height: 300px;
+  width: 70vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.no-display {
+  display: none;
+}
+
+.display {
+  display: block;
+}
+
+.h1 {
+  font-size: 1rem;
+  text-align: center;
+}
+
+.green {
+  background-color: lightgreen;
 }
